--- a/src/scss/component/custom.scss
+++ b/src/scss/component/custom.scss
@@ -5,5 +5,6 @@
 
 @import "node_modules/bootstrap/scss/grid";
 @import "node_modules/bootstrap/scss/utilities";
+@import "node_modules/bootstrap/scss/card";
 @import "node_modules/bootstrap/scss/buttons";
 @import "node_modules/bootstrap/scss/forms";
