【更新】介面優化+圖檔上傳問題
- 解決音直式圖片固定壓縮成寬度 400px 依然會有超過問題，所以按照圖片比例計算壓縮圖片的寬度
- 介面修改為讓發文區塊點擊後展開，不一定要滑到頁面底部才可以發文

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,3 +10,35 @@ body{
   padding: 0;
   margin: 0;
 }
+
+.board_form{
+  position: fixed;
+  z-index: 3;
+  box-shadow:  0 0 4px rgba(0,0,0,0.5);
+  @include md-width{
+    width: 80%;
+    left: 10%;
+    right: 10%; 
+    top: calc(50vh - 164px);
+  }
+  @include sm-width{
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+  }
+}
+
+.float_menu{
+  position: fixed;
+  z-index: 3;
+  right: 5%;
+  bottom: 5%;
+
+  button{
+    padding: 10px;
+    width: 51px;
+    font-size: 26px;
+    box-shadow: 0 0 4px rgba(0,0,0,0.5);
+  }
+}
