【更新】進度條 + FB串流測試 + 貼文長度檢查
- 貼文新增剩餘時間進度條顯示
- FB登入後資料串流到 Reducer 內
- 貼文文字長度防呆檢查

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -44,6 +44,12 @@ $content-height-sm: 120px;
     width: 100vw;
     height: 100vh;
   }
+
+  textarea[name="postText"]{
+    @include md-width{
+      height: 150px;
+    }
+  }
 }
 
 .float_menu{
@@ -58,4 +64,9 @@ $content-height-sm: 120px;
     font-size: 26px;
     box-shadow: 0 0 4px rgba(0,0,0,0.5);
   }
+}
+
+.progress-bar{
+  height: 5px;
+  background-color: #777;
 }
