【修正】檔案架構
- 輸出的資料夾直接指定為 /docs 以方便更新直接呈現在 GitHub 網頁上

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -43,6 +43,7 @@ $content-height-sm: 120px;
     left: 0;
     width: 100vw;
     height: 100vh;
+    overflow-y: scroll;
   }
 
   textarea[name="postText"]{
