--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -4142,7 +4142,8 @@ body {
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh; } }
+    height: 100vh;
+    overflow-y: scroll; } }
 
 @media all and (min-width: 768px) {
   .board-form textarea[name="postText"] {
