--- a/src/scss/component/custom.scss
+++ b/src/scss/component/custom.scss
@@ -8,3 +8,5 @@
 @import "node_modules/bootstrap/scss/card";
 @import "node_modules/bootstrap/scss/buttons";
 @import "node_modules/bootstrap/scss/forms";
+@import "node_modules/bootstrap/scss/modal";
+@import "node_modules/bootstrap/scss/close";
