【更新】上傳 + 首頁導向 + 帳戶頁
- 修正上傳新貼文會造成貼文會重複載入的問題，修改 AppScript 如果在傳入新貼文後只會回傳新的那筆資料
- 原本只傳入頁數的計算方式改成使用傳入的起點和終點間的資料全都撈出，以計算如果有新貼文的新起點和終點
- 因搬回到 GitHub 網址所以修改導向
- 新增帳戶頁填寫欄位

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -732,12 +732,12 @@ div {
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #007bff !important; }
+  background-color: #418EAB !important; }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #0062cc !important; }
+  background-color: #336f86 !important; }
 
 .bg-secondary {
   background-color: #6c757d !important; }
@@ -832,7 +832,7 @@ button.bg-dark:focus {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #007bff !important; }
+  border-color: #418EAB !important; }
 
 .border-secondary {
   border-color: #6c757d !important; }
@@ -3058,10 +3058,10 @@ button.bg-dark:focus {
   color: #fff !important; }
 
 .text-primary {
-  color: #007bff !important; }
+  color: #418EAB !important; }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #0056b3 !important; }
+  color: #2c6074 !important; }
 
 .text-secondary {
   color: #6c757d !important; }
@@ -3332,7 +3332,7 @@ a.text-dark:hover, a.text-dark:focus {
     text-decoration: none; }
   .btn:focus, .btn.focus {
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
+    box-shadow: 0 0 0 0.2rem rgba(65, 142, 171, 0.25); }
   .btn.disabled, .btn:disabled {
     opacity: 0.65; }
 
@@ -3342,26 +3342,26 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff; }
+  background-color: #418EAB;
+  border-color: #418EAB; }
   .btn-primary:hover {
     color: #fff;
-    background-color: #0069d9;
-    border-color: #0062cc; }
+    background-color: #36778f;
+    border-color: #336f86; }
   .btn-primary:focus, .btn-primary.focus {
-    box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(94, 159, 184, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff; }
+    background-color: #418EAB;
+    border-color: #418EAB; }
   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
   .show > .btn-primary.dropdown-toggle {
     color: #fff;
-    background-color: #0062cc;
-    border-color: #005cbf; }
+    background-color: #336f86;
+    border-color: #2f687d; }
     .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-primary.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5); }
+      box-shadow: 0 0 0 0.2rem rgba(94, 159, 184, 0.5); }
 
 .btn-secondary {
   color: #fff;
@@ -3525,25 +3525,25 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5); }
 
 .btn-outline-primary {
-  color: #007bff;
-  border-color: #007bff; }
+  color: #418EAB;
+  border-color: #418EAB; }
   .btn-outline-primary:hover {
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff; }
+    background-color: #418EAB;
+    border-color: #418EAB; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(65, 142, 171, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #007bff;
+    color: #418EAB;
     background-color: transparent; }
   .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-primary.dropdown-toggle {
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff; }
+    background-color: #418EAB;
+    border-color: #418EAB; }
     .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-primary.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5); }
+      box-shadow: 0 0 0 0.2rem rgba(65, 142, 171, 0.5); }
 
 .btn-outline-secondary {
   color: #6c757d;
@@ -3694,10 +3694,10 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #007bff;
+  color: #418EAB;
   text-decoration: none; }
   .btn-link:hover {
-    color: #0056b3;
+    color: #2c6074;
     text-decoration: underline; }
   .btn-link:focus, .btn-link.focus {
     text-decoration: underline;
@@ -3752,9 +3752,9 @@ input[type="button"].btn-block {
   .form-control:focus {
     color: #495057;
     background-color: #fff;
-    border-color: #80bdff;
+    border-color: #95c5d7;
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
+    box-shadow: 0 0 0 0.2rem rgba(65, 142, 171, 0.25); }
   .form-control::placeholder {
     color: #6c757d;
     opacity: 1; }
@@ -4279,6 +4279,11 @@ button.close {
 
 a.close.disabled {
   pointer-events: none; }
+
+.btn-blue {
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff; }
 
 div {
   box-sizing: border-box; }
