--- a/src/scss/component/custom.scss
+++ b/src/scss/component/custom.scss
@@ -1,4 +1,5 @@
 // Required
+$primary: #418EAB;
 @import "node_modules/bootstrap/scss/functions";
 @import "node_modules/bootstrap/scss/variables";
 @import "node_modules/bootstrap/scss/mixins";
@@ -10,3 +11,9 @@
 @import "node_modules/bootstrap/scss/forms";
 @import "node_modules/bootstrap/scss/modal";
 @import "node_modules/bootstrap/scss/close";
+
+.btn-blue{
+  color: #fff;
+  background-color: $blue;
+  border-color: $blue;
+}
